--- a/TileGen/build.gradle
+++ b/TileGen/build.gradle
@@ -1,10 +1,15 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 group 'com.n9mtq4.gss'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.8
+mainClassName = "com.n9mtq4.gss.iface.ScriptInterfaceKt"
 
 repositories {
     mavenCentral()
